--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -10,9 +10,23 @@
     <link href="src/css/tabler-icons.min.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="src/img/logo.png" />
     <title>~/</title>
+
+    <style>
+      /* Tambahkan GIF sebagai background */
+      body {
+          background-image: url('https://media.giphy.com/media/WrfgK836swOvrdycaG/giphy.gif');
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: center;
+      }
+    </style>
   </head>
 
   <body>
+    <!-- Tambahkan GIF di atas tabs-list -->
+    <img src="https://media.giphy.com/media/WrfgK836swOvrdycaG/giphy.gif" alt="GIF Animasi"
+      style="width: 200px; display: block; margin: auto;">
+
     <tabs-list></tabs-list>
 
     <script type="text/javascript" src="src/common/palette.js"></script>
@@ -35,5 +49,8 @@
     <script type="text/javascript" src="src/components/statusbar/statusbar.component.js"></script>
 
     <script type="text/javascript" src="src/common/module.js"></script>
+
+    <!-- Tambahkan script untuk menyisipkan GIF di dalam tabs-list -->
+    <script type="text/javascript" src="src/components/tabs/gif.js"></script>
   </body>
 </html>
