--- a/index.html
+++ b/index.html
@@ -10,23 +10,9 @@
     <link href="src/css/tabler-icons.min.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="src/img/logo.png" />
     <title>~/</title>
-
-    <style>
-      /* Tambahkan GIF sebagai background */
-      body {
-          background-image: url('https://media.giphy.com/media/WrfgK836swOvrdycaG/giphy.gif');
-          background-size: cover;
-          background-repeat: no-repeat;
-          background-position: center;
-      }
-    </style>
   </head>
 
   <body>
-    <!-- Tambahkan GIF di atas tabs-list -->
-    <img src="https://media.giphy.com/media/WrfgK836swOvrdycaG/giphy.gif" alt="GIF Animasi"
-      style="width: 200px; display: block; margin: auto;">
-
     <tabs-list></tabs-list>
 
     <script type="text/javascript" src="src/common/palette.js"></script>
@@ -50,7 +36,7 @@
 
     <script type="text/javascript" src="src/common/module.js"></script>
 
-    <!-- Tambahkan script untuk menyisipkan GIF di dalam tabs-list -->
-    <script type="text/javascript" src="src/components/tabs/gif.js"></script>
+    <!-- Script GIF Cursor -->
+    <script type="text/javascript" src="src/components/gif_cursor.js"></script>
   </body>
 </html>
