--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" />
     <link href="src/css/style.css" rel="stylesheet" type="text/css" />
     <link href="src/css/tabler-icons.min.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="src/img/logo.png" />
+    <link rel="icon" type="image/png" href="src/img/logohd.gif" />
     <title>~/</title>
   </head>
 
