--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     <script type="text/javascript" src="src/common/module.js"></script>
 
     <!-- Script GIF Cursor -->
-    <script type="text/javascript" src="src/components/gif_cursor.js"></script>
+    <script type="text/javascript" src="src/components/gif.js"></script>
   </body>
 </html>
