--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="author" content="AllJavi (https://github.com/AllJavi)" />
+    <meta name="author" content="sakenn (https://github.com/saken78)" />
     <link rel="stylesheet" type="text/css" href="src/css/awoo.min.css" />
     <link href="https://cdn.jsdelivr.net/gh/monzanifabio/cryptofont/cryptofont.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" />
